# reeverb

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  openapi.json  prek.toml  railway.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/dashboard/: Cargo.toml  Trunk.toml  index.html  style.css
crates/dashboard/src/: api.rs  app.rs  lib.rs
crates/dashboard/src/pages/: dashboard.rs  home.rs  login.rs  mod.rs  signup.rs
src/: lib.rs  main.rs  static_files.rs
src/api/v1/: mod.rs
src/api/v1/auth/: dto.rs  error.rs  handlers.rs  mod.rs
src/api/v1/projects/: dto.rs  error.rs  handlers.rs  mod.rs
src/api/v1/tags/: dto.rs  error.rs  handlers.rs  mod.rs
src/api/v1/testimonials/: dto.rs  error.rs  handlers.rs  mod.rs
src/db/: mod.rs
src/db/entities/: mod.rs  project.rs  tag.rs  testimonial.rs  testimonial_tag.rs  user.rs
src/db/migrations/: m20260218_000001_create_users.rs  m20260218_000003_create_testimonials.rs  m20260218_000008_create_analytics_events.rs  m20260218_000009_create_api_keys.rs  m20260218_182252_convert_pks_to_serial_add_pid.rs  mod.rs
src/migrations/: m20260218_000002_create_projects.rs  m20260218_000003_create_testimonials.rs  m20260218_000004_create_tags.rs  m20260218_000005_create_forms.rs  m20260218_000006_create_widgets.rs  m20260218_000007_create_import_sources.rs  m20260218_000008_create_analytics_events.rs  m20260218_000009_create_api_keys.rs  mod.rs
tests/: auth.rs  projects.rs  tags.rs  testimonials.rs
