[package]
name = "reeverb"
version = "0.1.0"
edition = "2024"
description = "Open-source testimonial platform. Collect, manage, and display social proof."
license = "MIT"
repository = "https://github.com/zaptech-dev/reeverb"
homepage = "https://reeverb.app"
readme = "README.md"
keywords = ["testimonials", "social-proof", "reviews", "widgets"]
categories = ["web-programming"]

[dependencies]
rapina = { version = "0.5.0", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
bcrypt = "0.16"

[profile.release]
lto = true
strip = true
opt-level = 3
